--- a/server/.env
+++ b/server/.env
@@ -9,3 +9,13 @@ SECRET_KEY=thisissecretkeyitsuseforcreatenewandstorgpasscode
 MAIL_USER=abdurroufkpkh@gmail.com
 MAIL_PASS=hiryzcdbckfybftu
 ADMIN_EMAIL=abdurroufkpkh@gmail.com
+
+
+
+CLOUD_NAME=dmfver2p9
+
+CLOUD_API_KEY=794938984595428
+
+CLOUD_API_SECRET=PJvNNJNGURPCYtpRKVMejviK5l4
+
+CLOUDINARY_URL=cloudinary://794938984595428:<PJvNNJNGURPCYtpRKVMejviK5l4>@dmfver2p9
